Draw image on Canvas

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <img src="out01.png" />
+    <canvas id="canvas" width="200" height="200"></canvas>
     <script src="renderer.js"></script>
   </body>
 </html>
