--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <canvas id="canvas" width="200" height="200"></canvas>
+    <div id="messageText"></div>
     <script src="renderer.js"></script>
   </body>
 </html>
